WEBSPARK-1884 - Fixed radio, checkbox alignment in College theme

--- a/profiles/openasu/themes/college/css/college.custom.css
+++ b/profiles/openasu/themes/college/css/college.custom.css
@@ -13,7 +13,7 @@
 
 #header > .container #headerContainer .region.region-header > *:not(#block-asu-brand-asu-brand-header-ws2.block-asu-brand) { max-width: 1164px; }
 
-#header > .container #headerContainer .universal-nav > div { margin: 0 auto; }
+#header > .container #headerContainer .universal-nav > div { margin: 0 auto; padding-right: 2rem; }
 
 body { min-width: 20em; }
 body #page .region-content { padding: 0; }
@@ -381,13 +381,11 @@ table.bordered > caption + thead > tr:first-child > th, table.bordered > caption
 
 .form-control { padding: 8px 16px; }
 
-/* Error alerts (form elements, others) */
 div.error, table tr.error { background-color: transparent; }
 
 .form-item input.error, .form-item textarea.error, .form-item select.error { border: 1px solid #CC2F2F; border-bottom-width: 4px; }
 
-/* Checkboxes */
-.form-type-checkbox { padding-left: 0.75em; }
+.form-type-checkbox { padding-left: 2em; }
 .form-type-checkbox label { display: inline-block; padding-left: 0.2em; position: relative; vertical-align: top; max-width: 95%; }
 .form-type-checkbox label::before { background-color: #fff; border: 1px solid #cccccc; border-radius: 0.25em; content: ""; display: inline-block; height: 1.5em; left: 0; margin-left: -2em; position: absolute; transition: border 0.15s ease-in-out 0s, color 0.15s ease-in-out 0s; width: 1.5em; }
 .form-type-checkbox label::after { color: #555555; display: inline-block; font-size: 1.25em; height: 1.4325em; width: 1.5em; position: absolute; left: 0.05em; top: -0.15em; margin-left: -1.55em; padding-left: 0; padding-top: 0; }
@@ -395,15 +393,7 @@ div.error, table tr.error { background-color: transparent; }
 .form-type-checkbox.form-type-checkbox-inline { margin-top: 0; }
 .form-type-checkbox input[type="checkbox"]:checked + label::after { content: ""; font-family: "FontAwesome"; }
 
-/* Radio && Checkboxes */
-.form-type-checkbox input[type="checkbox"], .form-type-radio input[type="radio"] { height: 1.5em; width: 1.5em; opacity: 0; z-index: 1; }
-.form-type-checkbox input[type="checkbox"]:focus + label::before, .form-type-radio input[type="radio"]:focus + label::before { outline: 2px solid #191919; outline-offset: 0.25rem; }
-.form-type-checkbox input[type="checkbox"]:indeterminate + label::after, .form-type-radio input[type="radio"]:indeterminate + label::after { background-color: #555555; border-radius: 0.0625em; content: ""; display: block; height: 0.125em; margin-left: -1.0312em; margin-top: 0.4325em; width: 0.625em; }
-.form-type-checkbox input[type="checkbox"]:disabled + label, .form-type-radio input[type="radio"]:disabled + label { opacity: 0.65; }
-.form-type-checkbox input[type="checkbox"]:disabled + label::before, .form-type-radio input[type="radio"]:disabled + label::before { background-color: #eeeeee; cursor: not-allowed; }
-
-/* Radio buttons */
-.form-type-radio { padding-left: inherit; }
+.form-type-radio { padding-left: 1em; }
 .form-type-radio label { display: inline-block; padding-left: 1em; position: relative; vertical-align: middle; max-width: 95%; }
 .form-type-radio label::before { background-color: #fff; border: 1px solid #cccccc; border-radius: 50%; content: ""; display: inline-block; position: absolute; height: 1.5em; width: 1.5em; left: 0; margin-left: -1.2em; transition: border 0.15s ease-in-out 0s; }
 .form-type-radio label::after { background-color: #555555; border-radius: 50%; content: " "; font-size: 1em; display: inline-block; position: absolute; height: 1em; width: 1em; top: 0.25em; left: 0.3em; margin-left: -1.25em; transform: scale(0, 0); transition: transform 0.05s cubic-bezier(0.8, -0.33, 0.2, 1.33) 0s; }
@@ -411,8 +401,16 @@ div.error, table tr.error { background-color: transparent; }
 .form-type-radio input[type="radio"]:checked + label::after { transform: scale(1, 1); }
 .form-type-radio.form-type-radio-inline { margin-top: 0; }
 
-input[type="checkbox"] .styled:checked + label::before, input[type="checkbox"] .styled:checked + label::after, input[type="radio"] .styled:checked + label::before, input[type="radio"] .styled:checked + label::after { color: #fff; }
-input[type="checkbox"].styled:checked + label::after, input[type="radio"].styled:checked + label::after { content: ""; font-family: "FontAwesome"; }
+/* Radio && Checkboxes */
+.form-type-checkbox input[type="checkbox"], .form-type-radio input[type="radio"] { height: 1.5em; width: 1.5em; opacity: 0; z-index: 1; }
+.form-type-checkbox input[type="checkbox"] .styled:checked + label::before, .form-type-checkbox input[type="checkbox"] .styled:checked + label::after, .form-type-radio input[type="radio"] .styled:checked + label::before, .form-type-radio input[type="radio"] .styled:checked + label::after { color: #fff; }
+.form-type-checkbox input[type="checkbox"].styled:checked + label::after, .form-type-radio input[type="radio"].styled:checked + label::after { content: ""; font-family: "FontAwesome"; }
+.form-type-checkbox input[type="checkbox"]:focus + label::before, .form-type-radio input[type="radio"]:focus + label::before { outline: 2px solid #191919; outline-offset: 0.25rem; }
+.form-type-checkbox input[type="checkbox"]:indeterminate + label::after, .form-type-radio input[type="radio"]:indeterminate + label::after { background-color: #555555; border-radius: 0.0625em; content: ""; display: block; height: 0.125em; margin-left: -1.0312em; margin-top: 0.4325em; width: 0.625em; }
+.form-type-checkbox input[type="checkbox"]:disabled + label, .form-type-radio input[type="radio"]:disabled + label { opacity: 0.65; }
+.form-type-checkbox input[type="checkbox"]:disabled + label::before, .form-type-radio input[type="radio"]:disabled + label::before { background-color: #eeeeee; cursor: not-allowed; }
+
+.form-checkboxes .form-item, .form-radios .form-item { margin-top: 0.5em; margin-bottom: 0.5em; }
 
 /* Action buttons for all forms */
 .form-actions { text-align: center; vertical-align: middle; padding-left: 1em; padding-right: 1em; display: inline-block; margin-bottom: 0.25em; margin-top: 0.25em; }
